--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ h1, h2, h4 {
 }
 
 article {
-	margin: 0;
+    margin: 1.875em 0;
 	padding: 0;
 	text-align: center;
 }
@@ -28,7 +28,7 @@ nav ul {
 
 nav ul li {
 	display: inline-block;
-	margin-right: 1em;
+	margin-right: 0.75em;
 	font-size: 0.75em;
 }
 
@@ -42,8 +42,10 @@ header, main, footer {
 }
 
 .funParagraph {
-    background-color: green;
+    color: green;
     display: block;
+    margin: 0;
+    text-align: center;
 }
 
 footer {
